--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "axios": "^1.7.2",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-rate-limit": "^7.5.0",
+    "express-validator": "^7.2.1",
+    "helmet": "^8.0.0",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
