--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node app.js",
     "dev": "nodemon app",
     "prod": "SET NODE_ENV=production & nodemon app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx jest"
   },
   "keywords": [],
   "author": "",
