--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
-version: "3.8"
+version: '3.8'
 
 services:
   api:
     build: .
     ports:
-      - "3000:3000"
+      - '3000:3000'
     depends_on:
       - redis
     environment:
@@ -18,5 +18,5 @@ services:
   redis:
     image: redis
     ports:
-      - "6379:6379"
+      - '6379:6379'
     restart: always
